@@ -813,6 +813,7 @@ R_HEADER_GLIBC2
 AC_TYPE_SIGNAL
 ## xz needs uint64_t
 AC_TYPE_UINT64_T
+AC_TYPE_INT64_T
 AC_TYPE_PID_T
 AC_TYPE_SIZE_T
 R_SIZE_MAX
